# zellige

./: LICENSE  README.md  circle.yml  stack-ci.yaml  stack.yaml  zellige.cabal
.circleci/: config.yml
.github/workflows/: build.yml
app/: Main.hs
bench/: Bench.hs
dump/: small.mvt
src/: Clip.hs  GeoJsonToMvt.hs  Lib.hs  SphericalMercator.hs  Types.hs
src/Data/Geometry/: Clip.hs  GeoJsonStreamingToMvt.hs  GeoJsonToMvt.hs  MapnikVectorTile.hs  Simplify.hs  SphericalMercator.hs  Types.hs  WindingOrder.hs
src/Data/Geometry/Clip/Internal/: CohenSutherlandLine.hs  LiangBarskyLine.hs  Line.hs  LineCohenSutherland.hs  LineLiangBarsky.hs  LineNichollLeeNicholl.hs  LineQuickClip.hs  Point.hs  Polygon.hs  PolygonNichollLeeNicholl.hs  PolygonNichollLeeNichollNicol.hs  PolygonQuickClip.hs  PolygonSutherlandHodgman.hs  QuickClipLine.hs
src/Data/Geometry/Simplify/: DouglasPeucker.hs
src/Data/Geometry/Types/: Config.hs  GeoJsonFeatures.hs  Geography.hs  LayerConfig.hs  MvtFeatures.hs  Simplify.hs  Types.hs
src/Data/Geometry/VectorTile/: Geometry.hs  Internal.hs  Types.hs  Util.hs  VectorTile.hs
src/Data/Geometry/VectorTile/Protobuf/Internal/: Vector_tile.hs
src/Data/Geometry/VectorTile/Protobuf/Internal/Vector_tile/: Tile.hs
src/Data/Geometry/VectorTile/Protobuf/Internal/Vector_tile/Tile/: Feature.hs  GeomType.hs  Layer.hs  Value.hs
test/Data/: SpecHelper.hs
test/Data/Geometry/: ClipSpec.hs  DouglasPeuckerSpec.hs  GeoJsonStreamingToMvtSpec.hs  GeoJsonToMvtSpec.hs  LayerSpecHelper.hs  MapnikVectorTileSpec.hs  MvtFeaturesSpec.hs  PolygonSpec.hs  SpecHelper.hs  SphericalMercatorSpec.hs  WindingOrderSpec.hs
test/Data/Geometry/Types/: GeographySpec.hs  MvtFeaturesSpec.hs
test/Data/Types/: GeographySpec.hs
test/integration/: 10056.json  19781.json  small.json
