name:                zellige
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zellige#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Geometry.Clip
                     , Data.Geometry.GeoJsonToMvt
                     , Data.Geometry.MapnikVectorTile
                     , Data.Geometry.SphericalMercator
                     , Data.Geometry.Types                     
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , unordered-containers
                     , handa-geodata
                     , optparse-generic
                     , scientific
                     , text
                     , trifecta
                     , utf8-string
                     , vector
                     , vector-th-unbox
                     , vectortiles
  ghc-options:       -Wall -Werror -O2                    
  default-language:    Haskell2010

executable zellige
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  build-depends:       base
                     , optparse-generic
                     , zellige                     
  default-language:    Haskell2010

test-suite zellige-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zellige
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/zellige
