name:                zellige
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zellige#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Geometry.Clip
                     , Data.Geometry.GeoJsonToMvt
                     , Data.Geometry.MapnikVectorTile
                     , Data.Geometry.SphericalMercator
                     , Data.Geometry.Types.Types
                     , Data.Geometry.Types.MvtFeatures
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , geojson
                     , optparse-generic
                     , scientific
                     , stm
                     , text
                     , trifecta
                     , utf8-string
                     , unordered-containers
                     , vector
                     , vectortiles
  ghc-options:       -Wall -Werror -O2                    
  default-language:    Haskell2010

executable zellige
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  build-depends:       base
                     , optparse-generic
                     , zellige                     
  default-language:    Haskell2010

test-suite zellige-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , containers
                     , geojson
                     , hspec
                     , lens
                     , QuickCheck
                     , scientific
                     , text
                     , vector
                     , vectortiles
                     , zellige
  other-modules:       Data.Geometry.ClipSpec
                     , Data.Geometry.GeoJsonToMvtSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2

  default-language:    Haskell2010

benchmark zellige-bench
  type: exitcode-stdio-1.0
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , cereal >=0.5 && <0.6
    , containers
    , protobuf >=0.2.1.1 && <0.3
    , text >=1.2 && <1.3
    , vector >=0.11 && <0.13
    , criterion >=1.1 && <1.3
    , microlens >=0.4 && <0.5
    , microlens-platform >=0.3 && <0.4
    , vectortiles
    , optparse-generic
    , zellige
  hs-source-dirs:
      bench
  main-is: Bench.hs
  default-language: Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded -O

source-repository head
  type:     git
  location: https://github.com/githubuser/zellige
