name:                zellige
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zellige#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Andrew Newman
maintainer:          andrewfnewman@gmail.com
copyright:           2017-2018
category:            Web, Geospatial
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Geometry.Clip
                     , Data.Geometry.Clip.Internal.Point
                     , Data.Geometry.Clip.Internal.Line
                     , Data.Geometry.Clip.Internal.LineCohenSutherland
                     , Data.Geometry.Clip.Internal.LineLiangBarsky
                     , Data.Geometry.Clip.Internal.LineQuickClip
                     , Data.Geometry.Clip.Internal.LineNichollLeeNicholl
                     , Data.Geometry.Clip.Internal.Polygon
                     , Data.Geometry.Clip.Internal.PolygonQuickClip
                     , Data.Geometry.Clip.Internal.PolygonNichollLeeNichollNicol
                     , Data.Geometry.Clip.Internal.PolygonSutherlandHodgman
                     , Data.Geometry.GeoJsonStreamingToMvt
                     , Data.Geometry.GeoJsonToMvt
                     , Data.Geometry.MapnikVectorTile
                     , Data.Geometry.Simplify
                     , Data.Geometry.SphericalMercator
                     , Data.Geometry.Types.Config
                     , Data.Geometry.Types.Geography
                     , Data.Geometry.Types.LayerConfig
                     , Data.Geometry.Types.GeoJsonFeatures
                     , Data.Geometry.Types.MvtFeatures
                     , Data.Geometry.Simplify.DouglasPeucker

  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , foldl
                     , geojson >= 3.0.4
                     , hashable
                     , optparse-applicative
                     , protocol-buffers >=2.4 && <2.5
                     , scientific
                     , stm
                     , text
                     , trifecta
                     , utf8-string
                     , unordered-containers
                     , validation
                     , vector
                     , vector-th-unbox
                     , vectortiles >= 1.5.0                
  ghc-options:         -Wall -Werror -O2                    
  default-language:    Haskell2010

executable zellige
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , optparse-applicative
                     , text
                     , zellige                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  default-language:    Haskell2010

test-suite zellige-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , containers
                     , geojson >= 3.0.4
                     , hspec
                     , lens
                     , QuickCheck
                     , scientific
                     , text
                     , unordered-containers
                     , vector
                     , vectortiles >= 1.5.0                
                     , zellige
  other-modules:       Data.Geometry.ClipSpec
                     , Data.Geometry.GeoJsonToMvtSpec
                     , Data.Geometry.DouglasPeuckerSpec
                     , Data.Geometry.SphericalMercatorSpec
                     , Data.Geometry.Types.MvtFeaturesSpec
                     , Data.SpecHelper
                     , Data.Types.GeographySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  default-language:    Haskell2010

test-suite              zellige-hlint
    hs-source-dirs:     hlint
    main-is:            Main.hs
    type:               exitcode-stdio-1.0
    build-depends:      base
                    ,   hlint
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Werror
                        -threaded
                        -O2

benchmark zellige-bench
  type:                exitcode-stdio-1.0
  build-depends:
                       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , cereal >=0.5 && <0.6
                     , containers
                     , criterion >=1.4 && <1.5
                     , geojson >= 3.0.4
                     , microlens >=0.4 && <0.5
                     , microlens-platform >=0.3 && <0.4
                     , optparse-generic >= 1.2.3
                     , protobuf >=0.2.1.1 && <0.3
                     , text >=1.2 && <1.3
                     , vector >=0.11 && <0.13
                     , vectortiles >= 1.5.0                
                     , zellige
  hs-source-dirs:
                       bench
  main-is:             Bench.hs
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports -fwarn-unused-binds -Wall -Werror -threaded -O2

source-repository head
  type:                git
  location:            https://github.com/githubuser/zellige
